--- a/app/config.json
+++ b/app/config.json
@@ -19,7 +19,7 @@
   },
   "report": {
     "to": "mgarcia.dmc@gmail.com",
-    "subject": "Comisiones Calculadas",
+    "subject": "Comisiones Calculadas Mayo",
     "body_html": "Estimado(a), <br>Adjunto encontrarás el archivo con las comisiones calculadas.<br>Saludos."
   }
 }
